--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@reduxjs/toolkit": "^1.7.1",
     "@svgr/webpack": "^5.5.0",
     "antd": "^4.17.3",
     "axios": "^0.24.0",
