--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^7.2.6",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.2.1",
+    "react-sortable-hoc": "^2.0.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
